refactor(arch): Restructure project to make architectural layers explicit
Align module structure with Clean Architecture layers